-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.3, 5.3.1
-
4.8: bf200fc948d89e1a735a8bcca879654028f944d2, 5.4: e93db692f88ad788a89a229ca974d5598dc104c2
When hiding an item this is laid out in a QGraphicsLinearLayout and change visibility of the item, the layout isn't updated and instead of changing the layout, a gap appears where the item used to be displayed.